--- a/common/models/project.json
+++ b/common/models/project.json
@@ -7,47 +7,47 @@
   },
   "properties": {
     "PROJECT_PK": {
-      "type": "object",
+      "type": "string",
       "id": true,
       "generated": true
     }
   },
   "validations": [],
   "relations": {
-    "questionTypes": {
+    "gradingCriteria": {
       "type": "hasMany",
-      "model": "QuestionType",
+      "model": "GradingCriteria",
       "foreignKey": "PROJECT_PK"
     },
-    "scoreTypes": {
+    "events": {
       "type": "hasMany",
-      "model": "ScoreType",
+      "model": "Event",
       "foreignKey": "PROJECT_PK"
     },
-    "eventTypes": {
+    "questions": {
       "type": "hasMany",
-      "model": "EventType",
+      "model": "Question",
       "foreignKey": "PROJECT_PK"
     }
   },
   "acls": [
-		{
-			"accessType": "*",
-			"principalType": "ROLE",
-			"principalId": "$everyone",
-			"permission": "DENY"
+    {
+      "accessType": "*",
+      "principalType": "ROLE",
+      "principalId": "$everyone",
+      "permission": "DENY"
     },
-		{
-			"accessType": "READ",
-			"principalType": "ROLE",
-			"principalId": "$everyone",
-			"permission": "ALLOW"
+    {
+      "accessType": "READ",
+      "principalType": "ROLE",
+      "principalId": "$everyone",
+      "permission": "ALLOW"
     },
-		{
-			"accessType": "WRITE",
-			"principalType": "ROLE",
-			"principalId": "Administrator",
-			"permission": "ALLOW"
+    {
+      "accessType": "WRITE",
+      "principalType": "ROLE",
+      "principalId": "Administrator",
+      "permission": "ALLOW"
     }
   ],
   "methods": {}
